# WARNING: head commit changed in the meantime
test

--- a/CrossoverTechMaven/pom.xml
+++ b/CrossoverTechMaven/pom.xml
@@ -12,14 +12,24 @@
 	<build>
 		<plugins>
 			<!-- Compiler plug-in -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
+			<!-- <plugin>
+				
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<source>${jdk.level}</source>
 					<target>${jdk.level}</target>
 				</configuration>
-			</plugin>
+			</plugin> -->
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>2.3.2</version>
+            <configuration>
+                <source>1.6</source>
+                <target>1.6</target>
+            </configuration>
+         </plugin>
+			
 			<!-- Below plug-in is used to execute tests -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
